<resources>
    <string name="app_name">TheOne</string>

    <!-- Strings related to login -->
    <string name="prompt_account">用户名</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">登录</string>
    <string name="tv_login_no_account">还没有帐号？</string>
    <string name="tv_login_to_register"><![CDATA[立即注册>]]></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_add">添加朋友</string>
    <string name="tv_hint_account">请输入用户名…</string>
    <string name="tv_hint_pwd">请输入密码</string>
    <string name="tv_hint_pwd_again">请再次输入密码</string>
    <string name="btn_register">注册</string>
    <string name="tv_hint_name">输入姓名</string>
    <string name="btn_hint_search">搜索</string>
    <string name="tv_user_info_portrait">头像</string>
    <string name="tv_user_info_account">账户</string>
    <string name="btn_user_info_add">添加好友</string>
    <string name="btn_user_info_chat">陌生人聊天</string>
    <string name="tv_agree">接受</string>
    <string name="menu_scan">扫一扫</string>
    <string name="menu_conversation">Conversation</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_settings">Settings</string>
    <string name="tv_cancel_send">手指上滑，取消发送</string>
    <string name="btn_down_speak">按住说话</string>
    <string name="tv_face_laugh">表情</string>
    <string name="tv_send">发送</string>
    <string name="btn_add">添加</string>
    <string name="tv_portrait">头像</string>
    <string name="tv_study">学一学</string>
    <string name="btn_login_out">退出登录</string>
    <string name="tv_new_friend">新朋友</string>
    <string name="tv_no_new_friend">没有好友请求！</string>
    <string name="btn_agree">同意</string>
</resources>
