<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".view.activity.UserInfoActivity">

    <include layout="@layout/include_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_portrait"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" />

        <ImageView
            android:id="@+id/ivPortraitUserInfo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            tools:src="@drawable/ic_launcher_background"
            android:layout_marginRight="16dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:drawable/divider_horizontal_textfield"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_account"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/tvAccountUserInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            tools:text="1456789"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:drawable/divider_horizontal_textfield"/>

    <Button
        android:id="@+id/btnAddUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/btn_user_info_add"
        android:background="@drawable/bmob_update_button_ok_bg_selector"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnChatUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bmob_update_button_ok_bg_selector"
        android:textColor="@android:color/white"
        android:text="@string/btn_user_info_chat"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

</LinearLayout>